--- a/Russell_1000_Analisis.ipynb
+++ b/Russell_1000_Analisis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "ddbf4816",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ACTIVO1609\\AppData\\Local\\Temp\\ipykernel_7556\\1865959092.py:16: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "C:\\Users\\juans\\AppData\\Local\\Temp\\ipykernel_20360\\1279450636.py:16: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
       "  tables = pd.read_html(response.text)\n"
      ]
     }
@@ -41,7 +41,7 @@
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "\n",
+    "import os\n",
     "# URL de la página\n",
     "url = 'https://en.wikipedia.org/wiki/Russell_1000_Index'\n",
     "\n",
@@ -65,6 +65,7 @@
     "# Extraer los tickers si existe la columna 'Symbol'\n",
     "if 'Symbol' in df_r1000.columns:\n",
     "    tickers = df_r1000['Symbol'].tolist()\n",
+    "    tickers=tickers[:100]\n",
     "else:\n",
     "    print(\"❌ La columna 'Symbol' no está en esta tabla.\")\n"
    ]
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "29b68df1",
    "metadata": {},
    "outputs": [],
@@ -88,7 +89,7 @@
     "\n",
     "# Obtener datos financieros para todos los tickers de una vez\n",
     "t = Ticker(tickers)\n",
-    "types=['BasicEPS', 'EBITDA', 'TotalRevenue', 'InterestExpense', 'TaxProvision', 'ChangeInWorkingCapital']\n",
+    "types=['BasicEPS','CashCashEquivalentsAndShortTermInvestments', 'EBITDA', 'TotalRevenue', 'InterestExpense', 'TaxProvision', 'ChangeInWorkingCapital','LongTermDebtAndCapitalLeaseObligation']\n",
     "eps_data = t.get_financial_data(types, trailing=False)\n"
    ]
   },
@@ -102,25 +103,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "c964eb91",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filtrar empresas con valores negativos en variables críticas\n",
     "eps_data = eps_data[\n",
-    "    (eps_data['BasicEPS'] > 0) &\n",
     "    (eps_data['EBITDA'] > 0) &\n",
     "    (eps_data['TotalRevenue'] > 0)\n",
     "]\n",
     "# Reemplazar InterestExpense nulos por 0 (caso típico)\n",
     "eps_data['InterestExpense'] = eps_data['InterestExpense'].fillna(0)\n",
+    "eps_data['CashCashEquivalentsAndShortTermInvestments'] = eps_data['CashCashEquivalentsAndShortTermInvestments'].fillna(0)\n",
+    "eps_data['TaxProvision'] = eps_data['TaxProvision'].fillna(0)\n",
+    "eps_data['LongTermDebtAndCapitalLeaseObligation'] = eps_data['LongTermDebtAndCapitalLeaseObligation'].fillna(0)\n",
     "\n",
     "#Margin Ebitda\n",
     "eps_data['EBITDA_Margin'] = eps_data['EBITDA'] / eps_data['TotalRevenue']\n",
     "#Límite 1\n",
     "Den = eps_data['EBITDA'] - eps_data['TaxProvision'] - eps_data['ChangeInWorkingCapital']\n",
     "eps_data['Límite1'] = eps_data['InterestExpense'] / Den\n",
+    "\n",
+    "#Límite 2\n",
+    "num = eps_data['LongTermDebtAndCapitalLeaseObligation'] - eps_data['CashCashEquivalentsAndShortTermInvestments']\n",
+    "Den2 = eps_data['EBITDA']\n",
+    "eps_data['Límite2'] = num / Den\n",
     "\n",
     "# Mantener solo tickers con al menos 4 registros de EPS\n",
     "ticker_counts = eps_data.index.get_level_values(0).value_counts()\n",
@@ -140,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "8681636f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Resetear índice y limpiar columnas\n",
     "eps_filtrado = eps_filtrado.reset_index()\n",
-    "eps_filtrado = eps_filtrado[['symbol', 'asOfDate', 'BasicEPS', 'EBITDA_Margin', 'Límite1']]\n",
+    "eps_filtrado = eps_filtrado[['symbol', 'asOfDate', 'BasicEPS', 'EBITDA_Margin', 'Límite1','Límite2']]\n",
     "eps_filtrado['asOfDate'] = pd.to_datetime(eps_filtrado['asOfDate'])\n",
     "\n",
     "# Agregar filas con +3 días para cubrir posibles feriados/no cotización\n",
@@ -156,7 +164,7 @@
     "rows_extra = []\n",
     "for idx, row in eps_filtrado.iterrows():\n",
     "    new_date = row['asOfDate'] + datetime.timedelta(days=3)\n",
-    "    rows_extra.append({'symbol': row['symbol'], 'asOfDate': new_date, 'BasicEPS': row['BasicEPS'],'EBITDA_Margin': row['EBITDA_Margin'],'Límite1': row['Límite1']})\n",
+    "    rows_extra.append({'symbol': row['symbol'], 'asOfDate': new_date, 'BasicEPS': row['BasicEPS'],'EBITDA_Margin': row['EBITDA_Margin'],'Límite1': row['Límite1'],'Límite2': row['Límite2']})\n",
     "\n",
     "eps_fiscal = pd.concat([eps_filtrado, pd.DataFrame(rows_extra)], ignore_index=True)\n"
    ]
@@ -171,22 +179,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "188e3912",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos actualizados hasta 2025-11-14, no se descarga nada.\n",
+      "Proceso completado.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Volver a crear objeto Ticker solo con los tickers válidos\n",
-    "t_valid = Ticker(tickers_validos)\n",
     "\n",
-    "# Descargar precios históricos diarios\n",
-    "prices = t_valid.history(start='2020-05-30', end='2025-08-30', interval='1d')\n",
+    "from datetime import datetime, timedelta\n",
+    "import os\n",
     "\n",
-    "# Limpiar columnas\n",
-    "prices = prices.drop(columns=['open', 'high', 'low', 'volume', 'adjclose', 'dividends', 'splits'])\n",
-    "prices = prices.reset_index()[['symbol', 'date', 'close']]\n",
-    "prices.rename(columns={'date': 'asOfDate'}, inplace=True)\n",
-    "prices['asOfDate'] = pd.to_datetime(prices['asOfDate'])\n"
+    "\n",
+    "START_DATE = \"2020-05-30\"          # Fecha inicial fija para descargar históricos\n",
+    "WEEKS_BACK = 2                     # Cuántas semanas antes de hoy descargar\n",
+    "PARQUET_FILE = \"prices.parquet\"    # Archivo local donde se guardan los datos\n",
+    "\n",
+    "\n",
+    "# CALCULAR FECHA FINAL (end_date)\n",
+    "# Dos semanas antes de la fecha actual\n",
+    "# .normalize() asegura que no tenga hora, para evitar problemas al comparar días\n",
+    "\n",
+    "today = pd.Timestamp.today().normalize()\n",
+    "end_date = today - timedelta(days=WEEKS_BACK * 7)\n",
+    "\n",
+    "# Ajustar end_date al último día hábil (lunes-viernes)\n",
+    "while end_date.weekday() > 4:\n",
+    "    end_date -= timedelta(days=1)\n",
+    "\n",
+    "# SI EL ARCHIVO YA EXISTE, CARGARLO Y VERIFICAR SI NECESITA ACTUALIZACIÓN\n",
+    "\n",
+    "if os.path.exists(PARQUET_FILE):\n",
+    "\n",
+    "    # Cargar datos existentes\n",
+    "    prices = pd.read_parquet(PARQUET_FILE)\n",
+    "\n",
+    "    # Última fecha disponible en el archivo local (sin hora)\n",
+    "    last_date = prices[\"asOfDate\"].max().normalize()\n",
+    "\n",
+    "    # Si el archivo ya está actualizado, no se descarga nada\n",
+    "    if last_date >= end_date:\n",
+    "        print(f\"Datos actualizados hasta {last_date.date()}, no se descarga nada.\")\n",
+    "\n",
+    "    else:\n",
+    "        \n",
+    "        print(f\"Actualizando datos desde {last_date.date()} hasta {end_date.date()}...\")\n",
+    "\n",
+    "        # Lista de tickers válidos ya almacenados\n",
+    "        tickers_validos = prices[\"symbol\"].unique().tolist()\n",
+    "\n",
+    "        # Crear objeto Ticker\n",
+    "        t = Ticker(tickers_validos)\n",
+    "\n",
+    "        # Descargar solo la parte faltante\n",
+    "        new_data = t.history(\n",
+    "            start=last_date + timedelta(days=1),  # día siguiente a los datos existentes\n",
+    "            end=end_date,\n",
+    "            interval=\"1d\"\n",
+    "        )\n",
+    "\n",
+    "        # Limpiar columnas y formatear\n",
+    "        new_data = (\n",
+    "            new_data\n",
+    "            .drop(columns=['open', 'high', 'low', 'volume', 'adjclose', 'dividends', 'splits'])\n",
+    "            .reset_index()[['symbol', 'date', 'close']]\n",
+    "            .rename(columns={'date': 'asOfDate'})\n",
+    "        )\n",
+    "\n",
+    "        # Normalizar fecha (sin hora)\n",
+    "        new_data['asOfDate'] = pd.to_datetime(new_data['asOfDate']).dt.normalize()\n",
+    "\n",
+    "        # Combinar histórico viejo + nuevo, eliminando duplicados\n",
+    "        prices = pd.concat([prices, new_data], ignore_index=True).drop_duplicates()\n",
+    "\n",
+    "        # Guardar archivo actualizado\n",
+    "        prices.to_parquet(PARQUET_FILE, index=False)\n",
+    "\n",
+    "else:\n",
+    "  \n",
+    "    # PRIMERA DESCARGA (si no existe el archivo)\n",
+    "\n",
+    "    print(\"Descargando datos históricos por primera vez...\")\n",
+    "\n",
+    "    # t_valid ya debería existir antes de esta etapa con los tickers válidos finales\n",
+    "    t = Ticker(tickers_validos)\n",
+    "\n",
+    "    # Descargar histórico completo una sola vez\n",
+    "    prices = t.history(start=START_DATE, end=end_date, interval=\"1d\")\n",
+    "\n",
+    "    # Limpiar columnas\n",
+    "    prices = (\n",
+    "        prices\n",
+    "        .drop(columns=['open', 'high', 'low', 'volume', 'adjclose', 'dividends', 'splits'])\n",
+    "        .reset_index()[['symbol', 'date', 'close']]\n",
+    "        .rename(columns={'date': 'asOfDate'})\n",
+    "    )\n",
+    "\n",
+    "    # Normalizar fecha (sin hora)\n",
+    "    prices['asOfDate'] = pd.to_datetime(prices['asOfDate']).dt.normalize()\n",
+    "\n",
+    "    # Guardar archivo\n",
+    "    prices.to_parquet(PARQUET_FILE, index=False)\n",
+    "\n",
+    "print(\"Proceso completado.\")\n",
+    "\n"
    ]
   },
   {
@@ -199,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "81d4ce8c",
    "metadata": {},
    "outputs": [],
@@ -371,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
